--- a/10_seedling/20_mid/40_how_to_prepare_nutrients/en.yml
+++ b/10_seedling/20_mid/40_how_to_prepare_nutrients/en.yml
@@ -7,7 +7,7 @@ tags:
 reftime: 5-7
 intro:
   image:
-    url: assets/pic.png
+    url: pic.png
     layout: left
   text: |
     Preparing your Mega Crop nutrient solution is simple.
