--- a/10_seedling/30_late/10_how_control_stretch/en.yml
+++ b/10_seedling/30_late/10_how_control_stretch/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 7
 intro:
   image:
-    url: assets/how_to_control_stretch.png
+    url: how_to_control_stretch.png
     layout: left
   text: |
      Plants strecth to reach adequate lighting.
