--- a/10_seedling/30_late/30_when_to_repot_your_seedling/en.yml
+++ b/10_seedling/30_late/30_when_to_repot_your_seedling/en.yml
@@ -16,5 +16,5 @@ products:
   - name: 1gal Fabric pot
     urls:
       - zone: US
-        image: assets/fabric_pot.png
+        image: fabric_pot.png
         url: https://www.amazon.com/dp/B013JFHNNE
