--- a/20_veg/20_mid/10_when_to_start_training/en.yml
+++ b/20_veg/20_mid/10_when_to_start_training/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 15-21
 intro:
   image:
-    url: assets/when_to_start_training.png
+    url: when_to_start_training.png
     layout: left
   text: |
     Increase yield potential by training your plant to best fit it's space and light configuration.
