--- a/20_veg/30_late/10_when_to_top/en.yml
+++ b/20_veg/30_late/10_when_to_top/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 28-35
 intro:
   image:
-    url: assets/when_to_top.png
+    url: when_to_top.png
     layout: left
   text: |
     Topping is a pruning method which consists in cutting the main stem to multiply the number of main colas and boost the side branches.
