--- a/30_bloom/20_mid/10_bloom_defoliation/en.yml
+++ b/30_bloom/20_mid/10_bloom_defoliation/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 49-56
 intro:
   image:
-    url: assets/bloom_defoliation.png
+    url: bloom_defoliation.png
     layout: left
   text: |
     It's time to defoliate!
