--- a/30_bloom/20_mid/20_bloom_defoliation_2/en.yml
+++ b/30_bloom/20_mid/20_bloom_defoliation_2/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 77-84
 intro:
   image:
-    url: assets/bloom_defoliation_2.png
+    url: bloom_defoliation_2.png
     layout: left
   text: |
     It's time to defoliate!
