--- a/30_bloom/30_late/20_when_to_flush/en.yml
+++ b/30_bloom/30_late/20_when_to_flush/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 84-91
 intro:
   image:
-    url: assets/when_to_flush.png
+    url: when_to_flush.png
     layout: left
   text: |
     Flushing: only using pH water for the last 1-2weeks before harvesting to improve the quality and smoothness of your cannabis buds.
