--- a/40_harvest/20_mid/10_how_to_wet_trim/en.yml
+++ b/40_harvest/20_mid/10_how_to_wet_trim/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 98-105
 intro:
   image:
-    url: assets/pic.png
+    url: pic.png
     layout: left
   text: |
     **Trimming brings out more smell than the flowering stage - be smart, stay safe**
@@ -25,23 +25,23 @@ products:
   - name: Pruning shears
     urls:
       - zone: US
-        image: assets/fiskar_pruning.png
+        image: fiskar_pruning.png
         url: https://amzn.to/2Tg72nm
 
   - name: Trimming scisors
     urls:
       - zone: US
-        image: assets/trimming_scisors.png
+        image: trimming_scisors.png
         url: https://amzn.to/2x3yz2A
 
   - name: Trim bin
     urls:
       - zone: US
-        image: assets/trimming_bin.png
+        image: trimming_bin.png
         url: https://amzn.to/2VJw6EV
 
   - name: Gloves
     urls:
       - zone: US
-        image: assets/gloves.png
+        image: gloves.png
         url: https://amzn.to/38f0CJe
