--- a/50_curing/10_early/40_1_week_cure/en.yml
+++ b/50_curing/10_early/40_1_week_cure/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 119-126
 intro:
   image:
-    url: assets/1_week_cure.png
+    url: 1_week_cure.png
     layout: left
   text: |
     Time to sample your harvest after it's 1st week of curing :)
