--- a/50_curing/20_mid/10_2_week_cure/en.yml
+++ b/50_curing/20_mid/10_2_week_cure/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 126-133
 intro:
   image:
-    url: assets/2_week_cure.png
+    url: 2_week_cure.png
     layout: left
   text: |
     Time to sample your harvest after 2 weeks of curing :)
