--- a/50_curing/30_late/10_4_week_cure/en.yml
+++ b/50_curing/30_late/10_4_week_cure/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 140-147
 intro:
   image:
-    url: assets/4_week_cure.png
+    url: 4_week_cure.png
     layout: left
   text: |
     Time to sample your harvest after 4 weeks of curing :)
