--- a/20_veg/30_late/20_how_to_top/en.yml
+++ b/20_veg/30_late/20_how_to_top/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 28-35
 intro:
   image:
-    url: assets/how_to_top.png
+    url: how_to_top.png
     layout: left
   text: |
     Simple, just cut the stem above the last node you want to keep :)
