--- a/40_harvest/30_late/10_how_to_dry_trim/en.yml
+++ b/40_harvest/30_late/10_how_to_dry_trim/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 112-119
 intro:
   image:
-    url: assets/how_to_dry_trim.png
+    url: how_to_dry_trim.png
     layout: left
   text: |
     Now that your harvest has dried it's time to trim!
@@ -25,23 +25,23 @@ products:
   - name: Pruning shears
     urls:
       - zone: US
-        image: assets/fiskar_pruning.png
+        image: fiskar_pruning.png
         url: https://amzn.to/2Tg72nm
 
   - name: Trimming scisors
     urls:
       - zone: US
-        image: assets/trimming_scisors.png
+        image: trimming_scisors.png
         url: https://amzn.to/2x3yz2A
 
   - name: Trim bin
     urls:
       - zone: US
-        image: assets/trimming_bin.png
+        image: trimming_bin.png
         url: https://amzn.to/2VJw6EV
 
   - name: Gloves
     urls:
       - zone: US
-        image: assets/gloves.png
+        image: gloves.png
         url: https://amzn.to/38f0CJe
