--- a/20_veg/20_mid/20_how_to_low_stress_training_LST/en.yml
+++ b/20_veg/20_mid/20_how_to_low_stress_training_LST/en.yml
@@ -10,7 +10,7 @@ intro:
     layout: left
   text: |
     Low Stress Training are methods that as the name imply don't cause much stress.
-    Tie down the side-branches with gardening wire to flatten them and open up the plant.
+    Tie down the side-branches with gardening wire to flatten and open up the plant.
     Let the plant take up the new space you created, when it gets crowded with leaves it will be time to defoliate.
 
 products:
