--- a/20_veg/20_mid/30_how_to_defoliate/en.yml
+++ b/20_veg/20_mid/30_how_to_defoliate/en.yml
@@ -13,3 +13,17 @@ intro:
     1. Start from the top; check under big leaves, if it's covering up a future branch/bud site; remove it by pinching the stem with your fingernails.
     2. Move your way down and keep removing the bigger leaves that cast shadows over interesting growth spots.
     3. Tangled/overlaping leaves should aslo be removed to help out your plant's succesful development.
+
+products:
+
+  - name: Coated wire
+    urls:
+      - zone: DE
+        image: assets/coated_wire.png
+        url: https://amzn.to/39WX4gl
+
+  - name: Trimming shears
+    urls:
+      - zone: DE
+        image: assets/trimming_shears.png
+        url: https://amzn.to/2ITakGS
