--- a/10_seedling/10_early/30_how_to_sow_your_seed/en.yml
+++ b/10_seedling/10_early/30_how_to_sow_your_seed/en.yml
@@ -10,27 +10,35 @@ intro:
     layout: left
   text: |
     The seed has sprouted! Time to **sow** it in it's first pot :)
-    1. Put a layer of clay balls in the small pot
-    1. Add soil and water it
-    2. Make a hole with your finger or a pen 1/2 fingernail deep
+    1. Put 1 layer of clay balls in the small pot
+    1. Add soil, water it, repeat until the soil almost reaches the top
+    *note: this 'lip' will prevent water from overflowing when watering*
+    2. Make a hole with your finger or a pen 1 fingernail deep
     3. Carfuly place the seed, cover it up with soil and tamp lightly
+    4. Mist/hydrate lightly twice daily to keep moisture up
+    5. Consider adding a transparent dome to increase humidity if your is low (RH<50%)
 
 products:
+  
   - name: Light mix soil
     urls:
-      - zone: EU
-        image: assets/monkey_soil.png
-        url: https://www.monkeysoil.com/en/product/light-mix-evolution/
+      - zone: DE
+        image: assets/light_mix.png
+        url: https://amzn.to/2IPzaHF
+  
   - name: Clay balls
     urls:
-      - zone: EU
+      - zone: DE
         image: assets/clay_balls.png
-        url: https://www.amazon.de/dp/B07KK9ZPRZ
-  - name: Small pot
+        url: https://amzn.to/2WfA2gC
+  
+  - name:   Small pot
     urls:
-      - zone: EU
+      - zone: DE
         image: assets/small_pot.png
-        url: https://www.amazon.de/dp/B07KK9ZPRZ
+        url: https://amzn.to/2voqPaP
+
+
 
 reminders:
   - delay: 1d
