--- a/20_veg/30_late/20_how_to_top/en.yml
+++ b/20_veg/30_late/20_how_to_top/en.yml
@@ -16,3 +16,17 @@ reminders:
     text: Check up on topping recovery
   - delay: 3-7d
     text: Ready to switch to bloom?
+
+products:
+
+  - name: Trimming shears
+    urls:
+      - zone: DE
+        image: assets/trimming_shears.png
+        url: https://amzn.to/2ITakGS
+
+  - name: Trimming shears
+    urls:
+      - zone: DE
+        image: assets/prunning_shears.png
+        url: https://amzn.to/2IPrg11
