img + title fix

--- a/40_harvest/20_mid/10_how_to_wet_trim/en.yml
+++ b/40_harvest/20_mid/10_how_to_wet_trim/en.yml
@@ -1,4 +1,4 @@
-title: How to trim your buds
+title: How to wet trim
 tags:
   - sgl
   - vertical
@@ -6,7 +6,7 @@ tags:
 reftime: 98-105
 intro:
   image:
-    url: pic.png
+    url: how_to_wet_trim.png
     layout: left
   text: |
     **Trimming brings out more smell than the flowering stage - be smart, stay safe**
