--- a/10_seedling/20_mid/30_how_to_prepare_nutrients/en.yml
+++ b/10_seedling/20_mid/30_how_to_prepare_nutrients/en.yml
@@ -1,4 +1,4 @@
-title: When to start adding nutrients
+title: How to prepare nutrients
 tags:
   - sgl
   - vertical
@@ -7,7 +7,7 @@ tags:
 reftime: 5-7
 intro:
   image:
-    url: assets/pic.png
+    url: how_to_prepare_nutrients.png
     layout: left
   text: |
     Preparing your Mega Crop nutrient solution is simple.
