--- a/10_seedling/30_late/30_when_to_repot_your_seedling/en.yml
+++ b/10_seedling/30_late/30_when_to_repot_your_seedling/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 8-10
 intro:
   image:
-    url: assets\when_to_repot_seedling.png
+    url: when_to_repot_seedling.png
     layout: left
   text: |
     The right time to transplant your seedlings is just before they outgrow their current container.
