--- a/10_seedling/10_early/30_how_to_sow_your_seed/en.yml
+++ b/10_seedling/10_early/30_how_to_sow_your_seed/en.yml
@@ -23,19 +23,19 @@ products:
   - name: Light mix soil
     urls:
       - zone: DE
-        image: assets/light_mix.png
+        image: light_mix.png
         url: https://amzn.to/2IPzaHF
   
   - name: Clay balls
     urls:
       - zone: DE
-        image: assets/clay_balls.png
+        image: clay_balls.png
         url: https://amzn.to/2WfA2gC
   
   - name:   Small pot
     urls:
       - zone: DE
-        image: assets/small_pot.png
+        image: small_pot.png
         url: https://amzn.to/2voqPaP
 
 
