--- a/10_seedling/20_mid/40_how_to_water/en.yml
+++ b/10_seedling/20_mid/40_how_to_water/en.yml
@@ -23,29 +23,29 @@ products:
   - name: pH meter
     urls:
       - zone: DE
-        image: assets/ph_meter.png
+        image: ph_meter.png
         url: https://amzn.to/2U8Yvlf
   
   - name: Digital scale
     urls:
       - zone: DE
-        image: assets/digital_scale.png
+        image: digital_scale.png
         url: https://amzn.to/2UcvKUG
 
   - name: pH reducer
     urls:
       - zone: DE
-        image: assets/ph_reducer.png
+        image: ph_reducer.png
         url: https://amzn.to/2Ufav4y
 
   - name: pH increaser
     urls:
       - zone: DE
-        image: assets/ph_increaser.png
+        image: ph_increaser.png
         url: https://amzn.to/3b3hc0D
 
   - name: Mega Crop
     urls:
       - zone: DE
-        image: assets/mega_crop.png
+        image: mega_crop.png
         url: https://greenleafnutrients.com/product/mega-crop/
