added triggers and updated values

--- a/10_seedling/20_mid/10_when_to_water_seedling/en.yml
+++ b/10_seedling/20_mid/10_when_to_water_seedling/en.yml
@@ -52,3 +52,7 @@ products:
       - zone: DE
         image: mega_crop.png
         url: https://greenleafnutrients.com/product/mega-crop/
+
+sources:
+  - title: GrowWeedEasy
+    url: https://www.growweedeasy.com/how-often-water-marijuana
