--- a/10_seedling/10_early/10_how_to_choose_your_seed/en.yml
+++ b/10_seedling/10_early/10_how_to_choose_your_seed/en.yml
@@ -15,9 +15,6 @@ intro:
 
 sections:
   - title: Recommended seedbanks
-    image:
-      url: pic.png
-      layout: full
     text: |
       We curated a list of the best most reputable seedbanks the community uses (ordered alphabetically).
       *Help us keep this guide free by using our affiliate links below.*
@@ -26,7 +23,7 @@ sections:
 
       - title: ILoveGrowingMarijuana
         image:
-          url: pic.png
+          url: ILGM.png
           layout: left
         text: |
           IloveGrowing Marijuana, founded by Robert Bergman, may not have the most extensive collection, but you are sure of buying exceptionally quality seeds.
@@ -36,7 +33,7 @@ sections:
 
       - title: Paradise Seeds
         image:
-          url: pic.png
+          url: paradise_seeds.png
           layout: left
         text: |
           Paradise Seeds is based out of Amsterdam and has been in operation since the early 1990s, making it one of the longest-established seedbanks on the internet.
@@ -46,7 +43,7 @@ sections:
 
       - title: Seedsman
         image:
-          url: pic.png
+          url: seedsman.png
           layout: left
         text: |
           Seedsman has been in business since 2003, making them one of the older online seed banks around. With strains from over 120 breeders they have one of the largest seed catalogs in the world!
@@ -56,7 +53,7 @@ sections:
 
       - title: Sensi Seeds
         image:
-          url: pic.png
+          url: sensi_seeds.png
           layout: left
         text: |
           Sensi Seeds pioneered the cannabis seed industry in 1985. Today, the company is the world’s largest cannabis seedbank with over 500 varieties. These genetics and the brand name have become true classics in the cannabis community.
