when/how_to_control_stretch in ...

--- a/10_seedling/10_early/10_how_to_choose_your_seed/en.yml
+++ b/10_seedling/10_early/10_how_to_choose_your_seed/en.yml
@@ -67,3 +67,16 @@ sections:
 sources:
   - title: Royal Queen Seeds
     url: https://www.royalqueenseeds.com/content/146-choose-the-right-cannabis-seeds-for-your-particular-needs
+
+ctas:
+  - title: Wet trim
+    actions:
+      - type: tip
+        params:
+        tip_id: 40_harvest\20_mid\10_how_to_trim
+
+      - type: set_key
+        params:
+          key: trim_type
+          value: wet
+        
