when to control stretch

--- a/10_seedling/20_mid/40_how_to_water/en.yml
+++ b/10_seedling/20_mid/40_how_to_water/en.yml
@@ -49,3 +49,11 @@ products:
       - zone: DE
         image: mega_crop.png
         url: https://greenleafnutrients.com/product/mega-crop/
+
+
+ctas:
+  - title: Water log
+    actions:
+      - type: log
+        params:
+      log_id: watering
