--- a/10_seedling/20_mid/30_how_to_prepare_nutrients/en.yml
+++ b/10_seedling/20_mid/30_how_to_prepare_nutrients/en.yml
@@ -18,6 +18,8 @@ intro:
     1. Weih the amount you need
     2. Dilute it in a smaller container with water before pouring it in your final container
     3. Mix and check pH
+    4. Adjust pH between 6-7
+    *note: experiment with different values within the range to support optimal nutrient uptake*
 
 ctas:
   - title: Go to calculator
